<resources>
    <string name="app_name">老人端</string>
    <string name="title_allow_zuji">哪些人能看我的足迹</string>
    <!--<string name="app_name">亲属端</string>-->
    <!--<string name="title_allow_zuji">我能看到哪些人足迹</string>-->
<!---->
    <string name="title_login">登录</string>
    <string name="list_empty_tips">加载失败，请稍后重试</string>
    <string name="page_adapter_loading_text">加载中...</string>
    <string name="page_adapter_loading_text_no_more">没有更多了</string>
    <string name="page_adapter_loading_text_more">加载更多</string>
    <string name="network_not_connection">没有网络连接</string>
    <string name="choose_mode_title">请选择设备类型</string>
    <string name="mode_seted_by_timeout">已默认设为智能设备</string>
    <string name="send_sms_wait">%1$d秒后重发</string>
    <string name="send_code">发送验证码</string>
    <string name="title_home">智能急救老人端</string>
    <string name="getting">获取中</string>
    <string name="home_relative_title">我的亲属(%1$d人)</string>
    <string name="home_relative_title_empry">我的亲属</string>
    <string name="load_failed">加载失败</string>
    <string name="load_retry">刷新</string>
    <string name="connected">已连接</string>
    <string name="not_connected">未连接</string>
    <string name="phone_format">电话：%1$s</string>
    <string name="battery_format">电量剩余：%1$d</string>
    <string name="news_detail_title">新闻详情</string>
    <string name="relation_list_title">关系人列表</string>
    <string name="berelation_list_title">申请加入列表</string>
    <string name="name_and_phone_empty">请输入新的名字</string>
    <string name="fragment_my_title">个人中心</string>
    <string name="add_relation_title">添加关系人</string>
    <string name="input_phone">请输入手机号</string>
    <string name="not_allowed">接受</string>
    <string name="allowed">已通过</string>
    <string name="not_open">未开通</string>
    <string name="open">已开通</string>
    <string name="no_device">无设备</string>
    <string name="title_change_phone_no">变更手机号</string>
    <string name="title_settings">设置</string>

    <string name="open_device_title">开通设备</string>
    <string name="input_device_code">请输入设备号</string>
    <string name="title_near">附近</string>
    <string name="can_not_search_near">定位失败，不能获取附近信息</string>:
    <string name="load_data_failed">数据加载失败</string>
    <string name="no_near_ambulance">附近没有医院</string>
    <string name="no_phone_no">没有电话号码</string>
    <string name="check_update_failed">检测升级失败，请检查网络</string>
    <string name="check_update_newest">当前版本已经是最新版</string>
    <string name="store_not_installed">请先下载360手机助手</string>
    <string name="goto_store_failed">请到360手机助手进行评价</string>
    <string name="baojing_shunxu_title">设置报警电话循序</string>
    <string name="dianliang_baojing_title">电量报警设置</string>
    <string name="dianliang_name_format">联系人：%1$s</string>
    <string name="message_center_title">消息中心</string>
    <string name="reserve_plan_title">急救手册</string>
    <string name="reserve_plan_time_format">本词条贡献者为:%1$s , 最后于%2$s编辑</string>
    <string name="help_center">帮助中心</string>
    <string name="abount_title">关于我们</string>
    <string name="agree">服务条款</string>
    <string name="map_weilan_title">设置活动范围</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="dianliang_alarm_title">电量低提醒</string>
    <string name="dianliang_alarm_content">手机电量过低，赶紧充电吧</string>
    <string name="weilan_alarm_title">活动范围提醒</string>
    <string name="weilan_alarm_content">您已经越出了活动范围</string>
    <string name="title_edit_my_info">修改个人信息</string>
    <string name="get_my_info_err">未获取到个人信息</string>
    <string name="toast_sd_not_mounted">SD卡未挂载，不能添加图片</string>
    <string name="pick_image_sources_title">请选择图片来源</string>
    <string name="pick_image_gallery_title">选择图片</string>
    <string name="pengyou_shuohua">和朋友说话</string>
    <string name="my_deliver_title">我的物流</string>
    <string name="product_list_title">商城</string>
    <string name="price_format">￥%1$s元</string>
    <string name="freight_format">(含运费%1$s元)</string>
    <string name="brand_format">品牌:%1$s</string>
    <string name="xinghao_format">型号:%1$s</string>
    <string name="duixiang_format">对象:%1$s</string>
    <string name="fenlei_format">分类:%1$s</string>
    <string name="insert_addr_title">添加地址</string>
    <string name="address_list_title">管理收货地址</string>
    <string name="zip_code_format">邮编：%1$s</string>
    <string name="open_device_list_title">开通设备状态列表</string>
    <string name="state_alarmed">报警</string>
    <string name="state_pluged">已插上</string>
    <string name="state_not_pluged">未插上</string>
    <string name="state_not_open">未开通</string>
    <string name="help_record_list_title">评价列表</string>
    <string name="rate_format">%1$s分</string>
    <string name="empty_rate">请输入评价</string>
    <string name="xianjin_title">现金</string>
    <string name="xianjin_format">￥%1$S元</string>
    <string name="shouru">收入</string>
    <string name="zhichu">支出</string>
    <string name="tixian_title">提现</string>
    <string name="zhifubao">支付宝</string>
    <string name="caifutong">财付通</string>
    <string name="weixin">微信</string>
    <string name="yinhangka">银行卡</string>
    <string name="zhanghao">账号:</string>
    <string name="kaihuhang">开户行:</string>
    <string name="kahao">卡号:</string>
    <string name="invite_code_format">邀请码:%1$s</string>
    <string name="invite_share_title">分享</string>
    <string name="invite_share_content">我的邀请码:%1$s，发现一个安全又好玩的智能急救宝，推荐你也使用，下载地址，http://7.77-7.com/x.htm</string>
    <string name="before_alram">报警后看急救车状态</string>
    <string name="after_alram">查看急救车状态</string>
    <string name="xingyong_shuoming_title">信用等级说明</string>
    <string name="news_list_title">相关资讯</string>
    <string name="running">正在运行</string>
    <string name="unknown">未知</string>
    <string name="no_relatives">未获取到亲属信息,不能让亲属帮忙报警</string>
    <string name="zuobiao">坐标</string>
    <string name="baojing_format">请帮我叫1,2,0,我在%1$s</string>
    <string name="relatives_list_title">亲属列表</string>
    <string name="h5_market">H5版</string>

    <string-array name="relation_item_long_click_options">
        <item>编辑</item>
        <item>删除</item>
    </string-array>
    <string-array name="pick_iamge_sources">
        <item>相册</item>
        <item>相机</item>
    </string-array>
    <string name="title_activity_add_acc">AddAccActivity</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
